# plug-proto

./: .cursorignore  .gitignore  LOG.md  PROGRESS.md  Qt.md  README.md  build_cpp.sh  build_wayland.sh  config.py  kill_yolo.sh  main.py  pyproject.toml  set_camera_ip.py  vsync_test.py  wayland_ui_test.py
.cursor/rules/: camera-system.mdc  cpp-integration.mdc  platform-hardware.mdc  project-structure.mdc  python-standards.mdc  utilities-and-tools.mdc
cam/: cv_grab_callback.py  mvsdk.py  ps_camera.py  vsync_test.py  wayland_test.py
cam/ps_camera_modules/: __init__.py  camera.py  timer.py  ui.py
cpp/: setup.py  timer.cpp  wayland_presentation.cpp
opengl_example/: README.md  WAYLAND_PRESENTATION.md  camera_controller.py  frame_counter.py  opengl_camera.py  vsync_frame_counter.py
src/: set_camera_ip.py  timer.py
src/_lib/: __init__.py  wayland_utils.py
src/_native/: README.md  __init__.py
src/cam/: ps_camera.py  util.py  wayland_test.py  wayland_ui_test.py
src/cam/ps_camera_modules/: camera.py  timer.py  ui.py
src/opengl_example/: IMPLEMENTATION_SUMMARY.md  WAYLAND_PRESENTATION.md  camera_controller.py  frame_counter.py  opengl_camera.py  opengl_camera_x11.py  vsync_frame_counter.py
src/ps/: app.py  settings.json  yolo_renderer.py
src/yolo/: convert_model_to_TensorRT.py  tensorrt_converter.py  wayland_detect.py  yolo_engine.py  yolo_model.py  yolo_pt.py  yolo_tensorrt.py  yolo_test.py  yoloe_pt.py
src/yolo/camera/: camera_controller.py  video_file_controller.py
src/yolo/inference/: config.py  engine.py  model_manager.py  worker.py
src/yolo/prompts/: current.txt
src/yolo/train/labels/: 20251023_155344_jpg.rf.87c3d617ce8843a38eb964fbf421e23a.txt  fe_jpg.rf.f7ad8a35090ed7876eb152848aee8f45.txt  fe_jpg.rf.fc4f6467d6c86c884e7c3d16e1a1c48b.txt
src/yolo/ui/: inference_engine.py  inference_worker.py  main_window.py  model_manager.py  pytorch_window.py  tensorrt_window.py  yoloe_window.py
wayland/: wayland_test.py
(+7 files in other folders)
